Steps how to reproduce with parallel installation of Master "LOdev 3.6.0alpha0+ – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 35ec153]" (tinderbox: Win-x86@6-fast, pull time 2012-05-02 06:53:41) 1. open Sample <https://bugs.freedesktop.org/attachment.cgi?id=61067> From "Bug 49520 - EDITING: CRASH when undo sort with chart" (you may delete chart and save with new name) 2. click into cell A3 3. Scroll to end of values using vertical scroll slider 4. <shift+click> C147 to select A3:C147 5. Menu 'Data -> Sort -> Top to bottom - all otheroptions unchecked - Column B - Ascending' <ok> Expected: Values column B sorted ascending, column "control" unsorted Actual: I seems as if columns A and be of sort area have been interchanged as for a 'Sort -> Left to right -> Column 3 Further tests seem to show that indeed a sort will be done for the last selected 'Sort - Horizonally" row in sort criteria selector. This problem may be the root for Bug 49520 Was ok with 3.5.3, so Regression
I have an idea what is going wrong here. Albert's rework switched to a temporary variable for ScSortParam which might hide the changed settings. I will look into this one. @Rainer: You might cc me in all bugs related to database and named ranges except if they are also related to pivot tables.
Fixed but the other bug is still present.
Markus Mohrhard committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=ee34a78b175765a1444071217239f3592c16eec1 use correct content for returned ScDBData, fdo#49531
Zdeněk Crhonek committed a patch related to this issue. It has been pushed to "master": https://git.libreoffice.org/core/+/b22d08827c0d42890cf1e45d084dc3e08bc48aa9%5E%21 uitest for bug tdf#49531 tdf#49520 It will be available in 6.3.0. The patch should be included in the daily builds available at https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: https://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
The test exist, set status to Verified.