use correct content for returned ScDBData, fdo#49531

Change-Id: I Ied7fff3162c98ffdb4b7e57d3c45516b403f9a68